feat: add teacher one-click setup (#1)
